Kubernetes/Practices/alpine-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  labels:
    app: alpine
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 50%
        maxUnavailable: 50%
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine:3.4
