Kubernetes/Practices/ns-jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: ns-jenkins
---
apiVersion: v1
kind: Pod
metadata:
    name: jenkins
    namespace: ns-jenkins
    labels:
        app: jenkins
spec:
    containers:
    - name: jenkins
      image: jenkins
      ports:
      - containerPort: 8080
