Kubernetes/Practices/tomcat-np-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-np
spec:
  selector:
    run: tomcat
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30002

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-lb
spec:
  selector:
    run: tomcat
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    run: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  template:
    metadata:
      labels:
        run: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat
        ports:
        - containerPort: 8080
