Kubernetes/Practices/tomcat-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: practice-ingress
spec:
  tls:
  - hosts:
    - tomcat.kei.com
    - http-go.kei.com
    secretName: tls-secret
  rules:
  - hosts: tomcat.kei.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-svc
          servicePort: 80
  - hosts: http-go.kei.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-go-svc
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: tomcat
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: http-go-svc
spec:
  selector:
    app: http-go
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: consol/tomcat-7.0
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-go
  labels:
    app: http-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-go
  template:
    metadata:
      labels:
        app: http-go
    spec:
      containers:
      - name: http-go
        image: amanaksu/http-go
        ports:
        - containerPort: 8080
